# JaxMARL

./: .coveragerc  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .mdformat.toml  .pre-commit-config.yaml  .pymarkdown.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  pyproject.toml
.cache/matplotlib/: fontlist-v390.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  docker-tests.yml  python-publish.yml  static-analysis.yml
baselines/IPPO/: README.md  ippo_cnn_overcooked.py  ippo_ff_hanabi.py  ippo_ff_mabrax.py  ippo_ff_mpe.py  ippo_ff_mpe_facmac.py  ippo_ff_overcooked.py  ippo_ff_switch_riddle.py  ippo_rnn_hanabi.py  ippo_rnn_mpe.py  ippo_rnn_overcooked_v2.py  ippo_rnn_smax.py
baselines/IPPO/config/: ippo_cnn_overcooked.yaml  ippo_ff_mabrax.yaml  ippo_ff_mpe_facmac.yaml  ippo_ff_overcooked.yaml  ippo_rnn_overcooked_v2.yaml  ippo_rnn_smax.yaml
baselines/MAPPO/: README.md  mappo_ff_hanabi.py  mappo_rnn_hanabi.py  mappo_rnn_mpe.py  mappo_rnn_smax.py
baselines/MAPPO/config/: mappo_homogenous_ff_hanabi.yaml  mappo_homogenous_rnn_hanabi.yaml  mappo_homogenous_rnn_mpe.yaml  mappo_homogenous_rnn_smax.yaml
baselines/QLearning/: README.md  iql_cnn_overcooked.py  iql_rnn.py  pqn_vdn_cnn_overcooked.py  pqn_vdn_ff.py  pqn_vdn_rnn.py  qmix_rnn.py  shaq.py  transf_qmix.py  vdn_cnn_overcooked.py  vdn_ff.py  vdn_rnn.py
baselines/QLearning/config/alg/: pqn_vdn_cnn_overcooked.yaml  pqn_vdn_ff_mpe.yaml  pqn_vdn_rnn_mpe.yaml  ql_cnn_overcooked.yaml  ql_rnn_mpe.yaml  transf_qmix_mpe.yaml
baselines/QLearning/utils/: fast_attention.py
docs/: Installation.md  index.md
docs/API/: multi_agent_env.md
docs/Algorithms/: PPO.md  QLearning.md
docs/Environments/: coin_game.md  hanabi.md  jaxnav.md  mabrax.md  mpe.md  overcooked.md  smax.md  storm.md
jaxmarl/: __init__.py  registration.py
jaxmarl/environments/: __init__.py  multi_agent_env.py  spaces.py
jaxmarl/environments/coin_game/: README.md  __init__.py  coin_game.py
jaxmarl/environments/hanabi/: README.md  __init__.py  hanabi.py  hanabi_game.py  manual_game.py  manual_game_human_agents.py
jaxmarl/environments/hanabi/pretrained/: __init__.py  obl_r2d2_agent.py  obl_r2d2_agent_test.py
jaxmarl/environments/jaxnav/: README.md  __init__.py  jaxnav_env.py  jaxnav_graph_utils.py  jaxnav_singletons.py  jaxnav_ued_utils.py  jaxnav_utils.py  jaxnav_viz.py
jaxmarl/environments/jaxnav/maps/: __init__.py  grid_map.py  map.py  map_registration.py  polygon_map.py
jaxmarl/environments/mabrax/: README.md  __init__.py  mabrax_env.py  mappings.py
jaxmarl/environments/mpe/: ReadMe.md  __init__.py  mpe_visualizer.py  simple.py  simple_adversary.py  simple_crypto.py  simple_facmac.py  simple_push.py  simple_reference.py  simple_speaker_listener.py  simple_spread.py  simple_tag.py  simple_world_comm.py
jaxmarl/environments/overcooked/: ReadMe.md  __init__.py  common.py  interactive.py  layouts.py  overcooked.py
jaxmarl/environments/overcooked_v2/: README.md  __init__.py  common.py  interactive.py  layouts.py  overcooked.py  utils.py
jaxmarl/environments/smax/: README.md  __init__.py  distributions.py  heuristic_enemy.py  heuristic_enemy_smax_env.py  smax_env.py  speed.py
jaxmarl/environments/storm/: README.md  __init__.py  storm.py  storm_2p.py  storm_env.py
jaxmarl/environments/switch_riddle/: README.md  __init__.py  switch_riddle.py
jaxmarl/gridworld/: README.md  common.py  env.py  grid_viz.py  interactive.py  ma_maze.py  maze.py  tabular_q.py
jaxmarl/tutorials/: mpe_introduction.py  overcooked_introduction.py  smax_introduction.py  storm_2p_introduction.py  storm_introduction.py  storm_np_introduction.py
jaxmarl/viz/: grid_rendering.py  overcooked_v2_visualizer.py  overcooked_visualizer.py  visualizer.py  window.py
jaxmarl/wrappers/: baselines.py  gymnax.py  transformers.py
site/: 404.html  index.html
site/API/multi_agent_env/: index.html
site/Algorithms/PPO/: index.html
site/Algorithms/QLearning/: index.html
site/Environments/coin_game/: index.html
site/Environments/hanabi/: index.html
site/Environments/jaxnav/: index.html
site/Environments/mabrax/: index.html
site/Environments/mpe/: index.html
site/Environments/overcooked/: index.html
site/Environments/smax/: index.html
site/Environments/storm/: index.html
site/Environments/switch_riddle/: index.html
site/Installation/: index.html
tests/: test_envs_implement_base_api.py  test_jaxmarl_api.py
tests/baselines/: test_ippo_mabrax.py  test_ippo_smoke.py  test_mappo_smax.py  test_mappo_smoke.py  test_pqn_overcooked.py  test_qlearning_smoke.py  test_qmix_mpe.py
tests/brax/: test_brax_rand_acts.py
tests/coin_game/: test_coin_game_rand_acts.py
tests/hanabi/: test_hanabi.py  test_hanabi_behavior.py
tests/jaxnav/: test_jaxnav_behavior.py  test_jaxnav_gridpolymap.py  test_jaxnav_rand_acts.py
tests/mpe/: mpe_policy_transfer.py  test_mpe.py  zoo_benchmark.py
tests/mpe/_test_utils/: rollout_manager.py
tests/overcooked/: test_overcooked_rand_acts.py
tests/overcooked_v2/: test_overcooked_behavior.py  test_overcooked_v2_rand_acts.py
tests/smax/: test_smax.py  test_smax_behavior.py
tests/storm/: test_storm_behavior.py  test_storm_rand_acts.py
tests/switch_riddle/: benchmark.py  switch_riddle_nojax.py  test_heuristic.py
tests/wrappers/: __init__.py  test_gymnax_wrapper.py  test_transformers.py  test_wrappers.py
