
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "jaxmarl.__version__"}

[project]
name = "jaxmarl"
readme = "README.md"
description = "Multi-Agent Reinforcement Learning with JAX"
authors = [
    {name = "Foerster Lab for AI Research", email = "arutherford@robots.ox.ac.uk"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "jax<=0.6.2",
  "jaxlib",
  "flax>=0.10.7",
  "safetensors",
  "chex",
  "brax==0.13.0",
  "mujoco==3.3.7",
  "matplotlib",
  "pillow",
  "scipy<=1.15.3",
  "gymnax",
]

[project.optional-dependencies]
algs = [
  "optax",
  "distrax",
  "flashbax==0.1.3",
  "wandb",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pettingzoo>=1.24.3",
  "mpe2",
  "tqdm>=4.66.0",
]
dev = [
  "pytest",
  "pytest-cov",
  "pygame",
  "pre-commit",
  "ruff",
  "mypy",
  "mdformat",
  "mdformat-gfm",
  "mdformat-black",
  "mdformat-config",
  "pymarkdownlnt",
]

[project.urls]
"Homepage" = "https://github.com/FLAIROx/JaxMARL"
"Bug Tracker" = "https://github.com/FLAIROx/JaxMARL/issues"

# Ruff configuration
[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Set line length to match black default
line-length = 88

# Directories to exclude from linting
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    ".local",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and additional rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that might conflict with JAX/ML code patterns
ignore = [
    "E501",   # Line too long (let formatter handle this)
    "B008",   # Do not perform function call in argument defaults (common in JAX)
    "B905",   # zip without strict parameter (Python 3.10+)
    "N803",   # Argument name should be lowercase (JAX uses uppercase for matrices)
    "N806",   # Variable in function should be lowercase (JAX conventions)
    "SIM108", # Use ternary operator (sometimes less readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "F401",   # Unused imports
    "F841",   # Unused variable
]
# Baseline algorithms often have complex implementations
"baselines/**/*.py" = [
    "C901",   # Function too complex
    "E731",   # Lambda assignment
]

[tool.ruff.lint.isort]
# Use Google-style import sorting
force-single-line = false
lines-after-imports = 2
known-first-party = ["jaxmarl"]
# Prevent circular imports by forcing MultiAgentEnv to be imported first
force-to-top = ["jaxmarl.environments.multi_agent_env"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Per-module options for external libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "flax.*",
    "optax.*",
    "distrax.*",
    "chex.*",
    "gymnax.*",
    "brax.*",
    "flashbax.*",
    "wandb.*",
    "hydra.*",
    "omegaconf.*",
    "pygame.*",
    "matplotlib.*",
    "scipy.*",
    "pettingzoo.*",
    "mpe2.*",
]
ignore_missing_imports = true

# Per-module options for JAX-heavy code
# JAX Arrays have complex type signatures that MyPy struggles with
[[tool.mypy.overrides]]
module = [
    "jaxmarl.environments.*",
    "jaxmarl.gridworld.*",
    "jaxmarl.wrappers.*",
    "jaxmarl.viz.*",
    "jaxmarl.tutorials.*",
]
# Ignore JAX-specific type issues:
# - index: Array indexing (JAX Arrays are indexable but MyPy doesn't recognize it)
# - union-attr: Array.at and other JAX Array methods
# - attr-defined: Flax struct dataclass .replace() method
# - assignment: JAX Array type assignments
# - arg-type: JAX/Flax function argument type mismatches
ignore_errors = true

# mdformat configuration
[tool.mdformat]
# Line length for markdown files
wrap = 88
# Number of spaces per indent level
number = true
# End files with a single newline
end_of_line = "lf"
